<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="265dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/drawer_bg"
    android:fadeScrollbars="false"
    android:fadingEdge="none"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/innerLayout"
        android:layout_width="265dp"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dip"
            android:minWidth="0dip"
            android:padding="10dp"
            android:text="@string/home"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_size" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.001dp"
            android:background="@color/menu_divider" />

        <TextView
            android:id="@+id/tv_aboutUs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dip"
            android:minWidth="0dip"
            android:padding="10dp"
            android:text="@string/about_us"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_size" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.001dp"
            android:background="@color/menu_divider" />

        <TextView
            android:id="@+id/tv_contactUs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dip"
            android:minWidth="0dip"
            android:padding="10dp"
            android:text="@string/contact_us"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@color/menu_divider" />

        <TextView
            android:id="@+id/tv_editProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dip"
            android:minWidth="0dip"
            android:padding="10dp"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@color/menu_divider" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dip"
            android:minWidth="0dip"
            android:padding="10dp"
            android:text="@string/exit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@color/menu_divider" />
    </LinearLayout>

</ScrollView>