<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/headerlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <include layout="@layout/header_include" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_profile"
        android:layout_gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="8dp"
        android:padding="20dp"
        android:scrollbars="vertical"
        android:text="@string/falcon_summary"
        android:textSize="@dimen/medium_size"
        android:visibility="gone" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerlayout" />

    <LinearLayout
        android:id="@+id/leave_mng_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:gravity="center_horizontal|center_horizontal"
            android:text="@string/leave_mgmt"
            android:textColor="@android:color/white"
            android:textSize="@dimen/big_size"
            android:textStyle="bold"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/light_green"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/download_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/share"
                android:gravity="center"
                android:inputType="textCapSentences"
                android:text="@string/dialog_share"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>